--- a/android/.classpath
+++ b/android/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="D:/AIR_3.9/lib/android/FlashRuntimeExtensions.jar"/>
 	<classpathentry kind="lib" path="libs/libammsdk.jar"/>
+	<classpathentry kind="lib" path="libs/FlashRuntimeExtensions.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
