--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,11 +7,7 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="9" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+    <application>
     </application>
 
 </manifest>
